Some VSE attributes with keyframes are not sensibly evaluated when the scene is referenced as a strip from another VSE scene #61619

Closed
opened 2019-02-16 23:02:52 +01:00 by Robert Forsman · 9 comments

System Information
Operating system:
gentoo
Linux herakleion 4.12.12-bob #38 SMP Sat Dec 9 23:32:34 EST 2017 x86_64 Intel(R) Core(TM) i7-7700 CPU @ 3.60GHz GenuineIntel GNU/Linux

Graphics card:
01:00.0 VGA compatible controller: NVIDIA Corporation GP106M [GeForce GTX 1060 Mobile 3GB] (rev a1) (prog-if 00 [VGA controller])

Blender Version
Broken: 2.79b

Short description of error

If a VSE strip is a scene strip that references another VSE scene and the Use Sequence checkbox is enabled, some properties that are keyframed in the source scene appear to not be evaluated correctly in their time frame in the target scene. I was animating the X Position on a transform strip. I got the animation the way I wanted in the source scene. When I referenced it from the main scene the videos did not show up in the position I expected.

Exact steps for others to reproduce the error

Create a scene with an image or movie whose transform X position is animated.
Create a second scene. Create a couple of scene strips referencing the first scene and lay them out through the timeline.
Scrub through the second scene and watch the animations not correlate with how the first scene was animated.

**System Information** Operating system: gentoo Linux herakleion 4.12.12-bob #38 SMP Sat Dec 9 23:32:34 EST 2017 x86_64 Intel(R) Core(TM) i7-7700 CPU @ 3.60GHz GenuineIntel GNU/Linux Graphics card: 01:00.0 VGA compatible controller: NVIDIA Corporation GP106M [GeForce GTX 1060 Mobile 3GB] (rev a1) (prog-if 00 [VGA controller]) **Blender Version** Broken: 2.79b **Short description of error** If a VSE strip is a scene strip that references another VSE scene and the Use Sequence checkbox is enabled, some properties that are keyframed in the source scene appear to not be evaluated correctly in their time frame in the target scene. I was animating the X Position on a transform strip. I got the animation the way I wanted in the source scene. When I referenced it from the main scene the videos did not show up in the position I expected. **Exact steps for others to reproduce the error** Create a scene with an image or movie whose transform X position is animated. Create a second scene. Create a couple of scene strips referencing the first scene and lay them out through the timeline. Scrub through the second scene and watch the animations not correlate with how the first scene was animated.
Author

Added subscriber: @mutantbob

Added subscriber: @mutantbob
Author

fcurve-bug.blend this uploaded project exhibits the problem in my version of 2.79b

[fcurve-bug.blend](https://archive.blender.org/developer/F6632775/fcurve-bug.blend) this uploaded project exhibits the problem in my version of 2.79b

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't reproduce this in 2.8 can you check that this is the case for you also?
https://builder.blender.org/download/

I can't reproduce this in 2.8 can you check that this is the case for you also? https://builder.blender.org/download/

Added subscriber: @iss

Added subscriber: @iss
Richard Antalik self-assigned this 2019-02-19 00:54:18 +01:00

@mutantbob the "more than erratic" (image jumping around after scrubbing) behavior is caused by rendered frames being put into cache + not evaluating prop value when rendering scene.

I can confirm property value not being evaluated. Being core functionality, assigning high priority.

@mutantbob the "more than erratic" (image jumping around after scrubbing) behavior is caused by rendered frames being put into cache + not evaluating prop value when rendering scene. I can confirm property value not being evaluated. Being core functionality, assigning high priority.
Author

When I load the .blend file into the 2.8 beta it behaves differently than 2.79, but is still not evaluating the way I feel it should.

Also, the mouse buttons do not work in 2.8 the way I remember them working in 2.79. It is very jarring.

When I load the .blend file into the 2.8 beta it behaves differently than 2.79, but is still not evaluating the way I feel it should. Also, the mouse buttons do not work in 2.8 the way I remember them working in 2.79. It is very jarring.

This issue was referenced by a372e5e426

This issue was referenced by a372e5e426e46f38a5fa08affb27f7fa726775b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61619
No description provided.